# moovai_test

./: README.md  app.py  pyproject.toml
pages/: 1_explo.py  2_modelisation.py  3_client_side.py
utils/: cleaning.py  client_model.py  inputs.py
