[tool.poetry]
name = "moovai"
version = "0.1.0"
description = ""
authors = ["theo.badoz <theo.badoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
