[tool.poetry]
name = "moovai"
version = "0.1.0"
description = ""
authors = ["theo.badoz <theo.badoz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
xgboost = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
